--- a/ui/html/templates/base.tmpl
+++ b/ui/html/templates/base.tmpl
@@ -15,6 +15,7 @@
         <div class="row">
             <h1>Trains</h1>
         </div>
+        {{template "header" .}}
         <div class="row">
             <form class="form-inline" action="/" method="get">
             <div class="form-group">
